--- a/CSYT/Languages/English.json
+++ b/CSYT/Languages/English.json
@@ -24,5 +24,6 @@
   "Settings_EnableVideoControls": "Enable Video Controls",
   "Settings_Opacity": "Opacity:",
   "Settings_OK": "OK",
-  "Settings_Cancel": "Cancel" 
+  "Settings_Cancel": "Cancel",
+  "Settings_YouMustRestart": "You must restart CSYT to language change take effect." 
 }
